--- a/css/main.scss
+++ b/css/main.scss
@@ -74,7 +74,8 @@ $heading-color:#200542;
 
     width:100%;
     height:fit-content;
-    
+    background: rgb(235, 235, 235);
+
     overflow-x: hidden;
 
     .section{
@@ -172,7 +173,7 @@ $heading-color:#200542;
         width:100%;
         position:relative;
         height:auto;
-        background: rgb(250, 250, 250);
+        background: rgb(235, 235, 235);
 
         .memphiselements{
 
@@ -310,11 +311,12 @@ $heading-color:#200542;
 
                 height:200px;
                 width:200px;
-                background: rgb(245, 245, 245);
+                background: rgb(235, 235, 235);
                 padding:20px;
                 color: rgb(41, 41, 41);
-                
+                box-shadow:-10px -10px 50px 0px rgb(255, 255, 255),10px 10px 20px 0px rgba(0, 0, 0,0.2);
                 border-radius: 5px;;
+                border:1px solid #fff;
                 margin:30px;
                 display:flex;
                 flex-direction: column;
@@ -564,11 +566,14 @@ $heading-color:#200542;
 
         min-height:100vh;
         width:100vw;
-        background: rgb(228, 228, 228);
+        background: rgb(220, 220, 220);
         display:flex;
         justify-content: center;
         flex-direction: column;
         align-items: center;
+        position:relative;
+        top:0;
+        margin-top:-30px;
         .hero-event{
             height:50vh;
             width:100vw;
@@ -630,6 +635,42 @@ $heading-color:#200542;
             align-items: center;
             flex-wrap: wrap;
             width:80%;
+            .event-modal-1{
+
+                height:50vh;
+                width:60vw;
+                display:none;
+                position:fixed;
+                border:1px solid #fff;
+                overflow: auto; 
+                top:10vh;
+               
+               
+                justify-content:center;
+                align-items: center;
+                flex-direction: column;
+                font-family: 'Poppins', sans-serif;
+                color:white;
+                background: rgba(42, 0, 109, 0.705);
+                backdrop-filter: blur(10px);
+                padding:20px;
+                .close{
+
+                    padding:15px;
+                    float: right;;
+                    position:absolute;
+                    right:0;
+                    top:0;
+                    cursor: pointer;
+                    background: rgb(231, 40, 221);
+
+                }
+                .modal-content{
+                    width:80%;
+                    font-family: 'Poppins', sans-serif;
+
+                }
+            }
             
             margin-top:10px;
             .event-card{
