--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,7 @@ body {
   padding: 0;
   font-family: 'Poppins',san-serif;
   overflow-x: hidden;
+  background-color: #170068;
 }
 
 .responsive-navbar {
@@ -30,7 +31,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-color: #4b006e;
+  background-color: #170068;
   color: white;
 }
 
@@ -81,7 +82,7 @@ body {
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
-  background: #ebebeb;
+  background-color: #170068;
   overflow-x: hidden;
 }
 
@@ -91,7 +92,6 @@ body {
 
 .main-container .home-section {
   height: 100vh;
-  background-image: url("../assets/bg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -99,7 +99,7 @@ body {
 .main-container .home-section .overlay {
   height: 100%;
   width: 100vw;
-  background-color: rgba(23, 0, 104, 0.466);
+  background-color: #170068;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -121,7 +121,8 @@ body {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
-  width: 50%;
+  width: 60%;
+  position: relative;
   height: 100%;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
@@ -134,7 +135,15 @@ body {
   font-size: 80px;
   font-family: 'Poppins', sans-serif;
   margin-left: 50px;
-  line-height: 10px;
+  line-height: 6px;
+}
+
+.main-container .home-section .overlay .home-content h1 .headtext {
+  margin: 0px;
+}
+
+.main-container .home-section .overlay .home-content h1 #space {
+  margin: 20px;
 }
 
 .main-container .home-section .overlay .home-content p {
@@ -170,20 +179,24 @@ body {
 }
 
 .main-container .home-section .overlay .home-contentTwo {
+  top: -100px;
+  position: relative;
   width: 45%;
 }
 
 .main-container .home-section .overlay .home-contentTwo img {
   height: 450px;
+  top: -300px;
+  position: relative;
 }
 
 .main-container .about-section {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -193,8 +206,8 @@ body {
           flex-direction: column;
   width: 100%;
   position: relative;
-  height: auto;
-  background: #ebebeb;
+  height: 100vh;
+  background-color: #170068;
 }
 
 .main-container .about-section .memphiselements {
@@ -217,16 +230,17 @@ body {
 .main-container .about-section h1 {
   font-size: 55px;
   font-family: 'Poppins', sans-serif;
-  color: #4b006e;
+  color: #ffffff;
 }
 
 .main-container .about-section P {
   width: 70%;
-  font-size: 16px;
+  font-size: 25px;
   font-family: 'Poppins', sans-serif;
   text-align: justify;
   font-weight: 500;
   margin: 30px;
+  color: #ffffff;
 }
 
 .main-container .about-section .about-services {
@@ -303,28 +317,31 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: auto;
+  height: 100vh;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
   text-align: justify;
+  background-color: #170068;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .main-container .domains h1 {
   font-size: 55px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  color: #4b006e;
+  color: #ffffff;
   font-weight: 400;
 }
 
 .main-container .domains p {
-  font-size: 20px;
-  width: 50%;
+  font-size: 25px;
+  width: 70%;
+  color: #ffffff;
 }
 
 .main-container .domains .domain-cards {
+  color: #ffffff;
   width: 80%;
   height: auto;
   border-radius: 5px;
@@ -347,8 +364,6 @@ body {
   background: #ebebeb;
   padding: 20px;
   color: #292929;
-  -webkit-box-shadow: -10px -10px 50px 0px white, 10px 10px 20px 0px rgba(0, 0, 0, 0.2);
-          box-shadow: -10px -10px 50px 0px white, 10px 10px 20px 0px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
   border: 1px solid #fff;
   margin: 30px;
@@ -390,13 +405,14 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  height: auto;
+  height: 100vh;
+  background-color: #170068;
 }
 
 .main-container .partners h1 {
   font-size: 55px;
   font-family: 'Poppins', sans-serif;
-  color: #4b006e;
+  color: #ffffff;
 }
 
 .main-container .partners .partner-container {
@@ -447,150 +463,66 @@ body {
   color: #545454;
 }
 
-.main-container .our-team {
-  height: auto;
+.main-container .testimonials {
+  height: 100vh;
   width: 100vw;
+  background-color: #170068;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-}
-
-.main-container .our-team h1 {
-  text-align: center;
-  font-size: 55px;
-  color: #4b006e;
-}
-
-.main-container .our-team .executives {
-  height: auto;
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-.main-container .our-team .executives .chinmay {
-  height: auto;
-  width: 50%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding: 10px;
-  margin: 10px;
-}
-
-.main-container .our-team .executives .chinmay .avatar {
-  height: 200px;
-  padding: 10px;
-}
-
-.main-container .our-team .executives .chinmay .description {
-  margin: 20px;
-}
-
-.main-container .our-team .executives .chinmay .description .title h1 {
-  text-align: left;
-  font-size: 30px;
-  line-height: 10px;
-}
-
-.main-container .our-team .executives .chinmay .description .title h4 {
-  text-align: left;
-}
-
-.main-container .our-team .executives .chinmay .description p {
-  text-align: justify;
-}
-
-.main-container .our-team .executives .riddhi {
-  height: auto;
-  width: 50%;
-  padding: 10px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
 }
 
-.main-container .our-team .executives .riddhi .avatar {
-  height: 200px;
-  padding: 10px;
-}
-
-.main-container .our-team .executives .riddhi .description {
-  margin: 20px;
-}
-
-.main-container .our-team .executives .riddhi .description .title h1 {
-  text-align: left;
-  font-size: 30px;
-  line-height: 10px;
-}
-
-.main-container .our-team .executives .riddhi .description .title h4 {
-  text-align: left;
-}
-
-.main-container .our-team .executives .riddhi .description p {
-  text-align: justify;
-}
-
-.main-container .our-team .executives .totheteamspage {
-  border: none;
-  padding: 12px;
-  outline: none;
-  font-size: 17px;
+.main-container .testimonials h1 {
   color: white;
-  border-radius: 5px;
-  margin: 30px;
-  -webkit-transition: all 100ms ease-in;
-  transition: all 100ms ease-in;
-  background: #c62a88;
+  font-size: 55px;
 }
 
-.main-container .our-team .executives .totheteamspage:hover {
-  cursor: pointer;
-  -webkit-transition: all 100ms ease-in;
-  transition: all 100ms ease-in;
-  -webkit-box-shadow: 0px 0px 120px 5px rgba(105, 0, 226, 0.705);
-          box-shadow: 0px 0px 120px 5px rgba(105, 0, 226, 0.705);
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+.main-container .testimonials .swiper-container {
+  width: 70vw;
+  height: 40vh;
+  color: white;
+}
+
+.main-container .testimonials .swiper-container .swiper-wrapper {
+  width: 100%;
+}
+
+.main-container .testimonials .swiper-container .swiper-wrapper .swiper-slide {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #0f0046;
+  border-radius: 10px;
+}
+
+.main-container .testimonials #totheblog {
+  padding: 25px;
+  background: #000;
+  margin-top: 30px;
+  border-radius: 10px;
+  color: white;
+  font-size: 20px;
+  text-decoration: none;
 }
 
 .main-container .team {
-  height: auto;
+  height: 100vh;
   width: 100vw;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -885,7 +817,7 @@ body {
 }
 
 footer {
-  height: auto;
+  height: 30vh;
   width: 100vw;
   background: #161616;
   display: -webkit-box;
