--- a/css/main.scss
+++ b/css/main.scss
@@ -8,6 +8,7 @@ body{
     
     font-family :'Poppins',san-serif;
     overflow-x: hidden;
+    background-color: rgb(23, 0, 104);
     
 
     
@@ -28,7 +29,7 @@ $heading-color:#200542;
     display:flex;
     justify-content:space-around;
     align-items: center;
-    background-color: #4b006e;
+    background-color: rgb(23, 0, 104);
     color:white;
     .nav-left{
 
@@ -74,7 +75,7 @@ $heading-color:#200542;
 
     width:100%;
     height:fit-content;
-    background: rgb(235, 235, 235);
+    background-color: rgb(23, 0, 104);
 
     overflow-x: hidden;
 
@@ -84,8 +85,9 @@ $heading-color:#200542;
     .home-section{
 
         height:100vh;
-       
-        background-image: url('../assets/bg.jpg');
+      
+           
+        // background-image: url('../assets/bg.jpg');
         background-repeat: no-repeat;
         background-size:cover;
        
@@ -93,8 +95,10 @@ $heading-color:#200542;
         
        .overlay{
             height:100%;
-            width:100vw;
-            background-color: rgba(23, 0, 104, 0.466);
+            width:100vw; // 
+            
+          
+            background-color: rgb(23, 0, 104);
             display:flex;
             justify-content: center;
             align-items:center;
@@ -104,7 +108,9 @@ $heading-color:#200542;
             display:flex;
             justify-content: center;
             align-items:flex-start;
-            width:50%;
+            width:60%;
+            position: relative;
+            
             height:100%;
             flex-direction: column;
             // backdrop-filter:blur(20px);
@@ -117,7 +123,15 @@ $heading-color:#200542;
                 font-family: 'Poppins', sans-serif;
 
                 margin-left:50px;
-                line-height: 10px;
+                line-height: 6px;
+
+                .headtext{
+                    margin:0px;
+
+                }
+                #space{
+                    margin:20px;
+                }
                 
             }
             p{
@@ -153,10 +167,13 @@ $heading-color:#200542;
         }
     
         .home-contentTwo{
-
+            top:-100px;
+                position:relative;
             width:45%;
             img{
                 height:450px;
+                top:-300px;
+                position:relative;
                 
             }
 
@@ -167,13 +184,13 @@ $heading-color:#200542;
     .about-section{
 
         display:flex;
-        justify-content:flex-start;
+        justify-content:center;
         align-items:center;
         flex-direction:column;
         width:100%;
         position:relative;
-        height:auto;
-        background: rgb(235, 235, 235);
+        height:100vh;
+        background-color: rgb(23, 0, 104);
 
         .memphiselements{
 
@@ -198,7 +215,7 @@ $heading-color:#200542;
 
             font-size: 55px;
             font-family: 'Poppins', sans-serif;
-            color:rgb(75, 0, 110);
+            color:#ffffff;
             // text-decoration: underline 3px rgba(101, 0, 216, 0.316) ;
             
             
@@ -207,11 +224,12 @@ $heading-color:#200542;
         }
         P{
             width:70%;
-            font-size:16px;
+            font-size:25px;
             font-family: 'Poppins', sans-serif;
             text-align: justify;
             font-weight: 500;
             margin:30px;
+            color:#ffffff;
 
         }
         .about-services{
@@ -278,25 +296,28 @@ $heading-color:#200542;
         display:flex;
         justify-content:center;
         align-items:center;
-        height:auto;;
+        height:100vh;;
         flex-direction: column;
         text-align: justify;
+        background-color: rgb(23, 0, 104);
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         h1{
             
             font-size: 55px;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            color:rgb(75, 0, 110);
+            color:#ffffff;
             font-weight: 400;
             
         }
         p{
-            font-size: 20px;;
-            width:50%;
+            font-size: 25px;;
+            width:70%;
+            color:#ffffff;
             
             
         }
         .domain-cards{
+            color:#ffffff;
 
             width:80%;
             height:auto;
@@ -314,7 +335,7 @@ $heading-color:#200542;
                 background: rgb(235, 235, 235);
                 padding:20px;
                 color: rgb(41, 41, 41);
-                box-shadow:-10px -10px 50px 0px rgb(255, 255, 255),10px 10px 20px 0px rgba(0, 0, 0,0.2);
+                // box-shadow:-10px -10px 50px 0px rgb(255, 255, 255),10px 10px 20px 0px rgba(0, 0, 0,0.2);
                 border-radius: 5px;;
                 border:1px solid #fff;
                 margin:30px;
@@ -341,14 +362,15 @@ $heading-color:#200542;
     .partners {
 
         display:flex;
-        justify-content: center;
-        align-items: center;
+        justify-content:center;
+        align-items:center;
         flex-direction: column;
-        height:auto;
+        height:100vh;
+        background-color: rgb(23, 0, 104);
         h1{
             font-size: 55px;
             font-family: 'Poppins', sans-serif;
-            color:rgb(75, 0, 110);
+            color:#ffffff;
         }
         .partner-container{
             width:80%;
@@ -386,131 +408,182 @@ $heading-color:#200542;
         }
 
     }
-    .our-team{
-        height:auto;
-        width:100vw;
-        display:flex;
-        justify-content:center;align-items:center;
-        flex-direction: column;
+    // .our-team{
+    //     height:auto;
+    //     width:100vw;
+    //     display:flex;
+    //     justify-content:center;align-items:center;
+    //     flex-direction: column;
+    //     background-color: rgb(23, 0, 104);
 
-        h1{
-            text-align:center;
-            font-size:55px;
-            color:#4b006e;
+    //     h1{
+    //         text-align:center;
+    //         font-size:55px;
+    //         color:#4b006e;
 
-        }
-        .executives{
-            height:auto;
-            width:100%;
-            display:flex;
-            justify-content:center;align-items:center;
-            flex-direction: column;
+    //     }
+    //     .executives{
+    //         height:auto;
+    //         width:100%;
+    //         display:flex;
+    //         justify-content:center;align-items:center;
+    //         flex-direction: column;
 
-            .chinmay{
-                height:auto;
-                width:50%;
-                display:flex;
-                justify-content:space-between;
-                align-items:center;
-                padding:10px;
-                // background: rgb(223, 223, 223);
-                // border-radius: 10px;;
-                margin:10px;
+    //         .chinmay{
+    //             height:auto;
+    //             width:50%;
+    //             display:flex;
+    //             justify-content:space-between;
+    //             align-items:center;
+    //             padding:10px;
+    //             // background: rgb(223, 223, 223);
+    //             // border-radius: 10px;;
+    //             margin:10px;
 
-                .avatar{
-                    height:200px;
-                    padding:10px;
-                }
-                .description{
-                    margin:20px;
-                    .title{
-                        h1{
-                            text-align: left;;
-                            font-size:30px;
-                            line-height:10px;
+    //             .avatar{
+    //                 height:200px;
+    //                 padding:10px;
+    //             }
+    //             .description{
+    //                 margin:20px;
+    //                 .title{
+    //                     h1{
+    //                         text-align: left;;
+    //                         font-size:30px;
+    //                         line-height:10px;
                             
-                        }
-                        h4{
+    //                     }
+    //                     h4{
 
-                            text-align:left;
+    //                         text-align:left;
                             
-                        }
-                    }
-                    p{
+    //                     }
+    //                 }
+    //                 p{
 
-                        text-align: justify;
+    //                     text-align: justify;
 
-                    }
-                }
-            }
-            .riddhi{
-                height:auto;
-                width:50%;
-                padding:10px;
-                display:flex;
-                justify-content:space-between;
-                align-items:center;
-                // background: rgb(223, 223, 223);
-                // border-radius: 10px;;
+    //                 }
+    //             }
+    //         }
+    //         .riddhi{
+    //             height:auto;
+    //             width:50%;
+    //             padding:10px;
+    //             display:flex;
+    //             justify-content:space-between;
+    //             align-items:center;
+    //             // background: rgb(223, 223, 223);
+    //             // border-radius: 10px;;
                 
 
 
-                .avatar{
-                    height:200px;
-                    padding:10px;
-                }
-                .description{
-                    margin:20px;
-                    .title{
-                        h1{
-                            text-align: left;;
-                            font-size:30px;
-                            line-height:10px;
+    //             .avatar{
+    //                 height:200px;
+    //                 padding:10px;
+    //             }
+    //             .description{
+    //                 margin:20px;
+    //                 .title{
+    //                     h1{
+    //                         text-align: left;;
+    //                         font-size:30px;
+    //                         line-height:10px;
                             
                             
-                        }
-                        h4{
+    //                     }
+    //                     h4{
 
-                            text-align:left;
+    //                         text-align:left;
 
                             
-                        }
-                    }
-                    p{
-                        text-align: justify;
-                    }
-                }
-            }
-            .totheteamspage{
+    //                     }
+    //                 }
+    //                 p{
+    //                     text-align: justify;
+    //                 }
+    //             }
+    //         }
+    //         .totheteamspage{
 
-                    border:none;
-                    padding:12px;
-                    outline: none;
-                    font-size:17px;
-                    color:white;
-                    border-radius: 5px;;
-                    margin:30px;
-                    transition:all 100ms ease-in;
+    //                 border:none;
+    //                 padding:12px;
+    //                 outline: none;
+    //                 font-size:17px;
+    //                 color:white;
+    //                 border-radius: 5px;;
+    //                 margin:30px;
+    //                 transition:all 100ms ease-in;
                     
-                    background: #c62a88;
-                   &:hover{
+    //                 background: #c62a88;
+    //                &:hover{
                        
-                       cursor: pointer;
-                       transition:all 100ms ease-in;
-                       box-shadow: 0px 0px 120px 5px rgba(105, 0, 226, 0.705);
-                       transform:scale(1.1);
-                   }
-           }
+    //                    cursor: pointer;
+    //                    transition:all 100ms ease-in;
+    //                    box-shadow: 0px 0px 120px 5px rgba(105, 0, 226, 0.705);
+    //                    transform:scale(1.1);
+    //                }
+    //        }
 
-        }
+    //     }
       
         
        
         
 
+    // }
+
+    .testimonials{
+        height:100vh;
+        width:100vw;
+        background-color: #170068;
+        display:flex;
+        justify-content: flex-start;
+        flex-direction: column;
+        align-items: center;
+        h1{
+            color:white;
+            font-size:55px;
+        }
+        .swiper-container {
+            width:70vw;
+            height: 40vh;
+            color:white;
+            
+          
+            .swiper-wrapper{
+                width:100%;
+                
+               
+                .swiper-slide{
+                    display:flex;
+                    justify-content: center;
+                    align-items: center;
+                    background-color: #0f0046;
+                    border-radius: 10px;;
+                    
+
+                }
+                
+            }
+          }
+
+        #totheblog{
+
+            padding:25px;
+            background: #000;
+            margin-top:30px;
+            border-radius: 10px;;
+            color:white;
+            font-size:20px;
+            text-decoration:none;
+
+
+        }
+        
     }
     .team{
-        height:auto;
+        height:100vh ;
         width:100vw;
         display:flex;
         justify-content:center;
@@ -752,7 +825,7 @@ $heading-color:#200542;
 
 footer{
 
-    height:auto;;
+    height:30vh;;
     width:100vw;
     background: rgb(22, 22, 22);
     display:flex;
@@ -763,6 +836,8 @@ footer{
     flex-direction: column;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color:rgb(181, 181, 181);
+    // border-top-left-radius: 50%;;
+    // border-top-right-radius: 50%;;
    
  
     
