--- a/css/main.scss
+++ b/css/main.scss
@@ -138,29 +138,40 @@ $heading-color:#200542;
                 color:white;
                 font-family: 'Poppins', sans-serif;
                 width:80%;
-                font-size:30px;
+                font-size:35px;
                 margin-left:50px;
                 
             }
             .home-btn{
     
                 border:none;
-                width:170px;
-                height:40px;
+                width:250px;
+                height:70px;
                 outline: none;
-                font-size:17px;
+                font-size:24px;
                 color:white;
-                border-radius: 5px;;
+                // border-radius: 5px;;
                 margin-left:50px;
                 transition:all 100ms ease-in;
-                
-                background: #c62a88;
+                background: #170068;
+                border:5px solid rgb(0, 124, 195);
+                border-top:5px solid #3700ff;
+                border-bottom:5px solid #3700ff;
+                border-radius: 50px;
+                // background: #c62a88;
                 &:hover{
                     
                     cursor: pointer;
                     transition:all 100ms ease-in;
-                    box-shadow: 0px 0px 120px 5px rgba(105, 0, 226, 0.705);
+                    // box-shadow: 0px 0px 120px 5px rgba(105, 0, 226, 0.705);
                     transform:scale(1.1);
+                    border-left:5px solid #3700ff;
+                    border-right:5px solid #3700ff;
+                    border-top:5px solid rgb(0, 124, 195);
+                    border-bottom:5px solid rgb(0, 124, 195);
+                    
+                
+
                 }
                 }
 
