--- a/css/main.scss
+++ b/css/main.scss
@@ -21,52 +21,51 @@ body{
 
 $heading-color:#200542;
 .navbar{
+
+    display:none;
+  .nav-container{
     font-family: 'Poppins', sans-serif;
-    height:80px;
+    height:100vh;
     width:100%;
     position:sticky;
     z-index:999;
     display:flex;
     justify-content:space-around;
     align-items: center;
-    background-color: rgb(23, 0, 104);
+    background-color: rgba(23, 0, 104, 0.555);
+    position:absolute;;
+    backdrop-filter: blur(10px);
     color:white;
-    .nav-left{
-
-        display:flex;
-        justify-content:space-around;
-        align-items: center;
-        width:25%;
-
-        .nav-link-left{
-            color:white;
-            text-decoration: none;;
-            font-size:15px;
-            font-weight: bold;
-        }
-    }
     .logo{
-        height:70px;
-        
-        
+        height:200px;
     }
-    .nav-right{
-
-        display:flex;
-        justify-content:space-around;
-        align-items: center;
-        width:25%;
-
-        .nav-link-right{
-            color:white;
-            text-decoration: none;;
-            font-size:15px;
-            font-weight: bold;
+    .links{
+        li{
+            font-size:40px;
+            margin:30px;
+            list-style: none;
+            a{
+                color:white;
+                text-decoration:none;;
+            }
         }
     }
+  }
 
 
 
+}
+.menu-button{
+    position:absolute;
+    top:60px;
+    right:30px;
+    .menu-icon-line{
+        height:5px;
+        width:50px;
+        background: rgb(0, 183, 255);
+        margin:10px;
+        z-index: 11;
+    }
 }
 
 
@@ -164,7 +163,7 @@ $heading-color:#200542;
                     cursor: pointer;
                     transition:all 100ms ease-in;
                     // box-shadow: 0px 0px 120px 5px rgba(105, 0, 226, 0.705);
-                    transform:scale(1.1);
+                    transform:scale(1.02);
                     border-left:5px solid #3700ff;
                     border-right:5px solid #3700ff;
                     border-top:5px solid rgb(0, 124, 195);
@@ -173,7 +172,7 @@ $heading-color:#200542;
                 
 
                 }
-                }
+            }
 
         }
     
@@ -343,12 +342,12 @@ $heading-color:#200542;
 
                 height:200px;
                 width:200px;
-                background: rgb(235, 235, 235);
+                background-color: #0f0046;
                 padding:20px;
                 color: rgb(41, 41, 41);
                 // box-shadow:-10px -10px 50px 0px rgb(255, 255, 255),10px 10px 20px 0px rgba(0, 0, 0,0.2);
                 border-radius: 5px;;
-                border:1px solid #fff;
+              
                 margin:30px;
                 display:flex;
                 flex-direction: column;
@@ -361,7 +360,7 @@ $heading-color:#200542;
                 }
                 h2{
                     text-align:center;
-                    color: rgb(84, 84, 84);
+                    color: rgb(255, 255, 255);
                 }
 
             }
@@ -549,7 +548,7 @@ $heading-color:#200542;
         width:100vw;
         background-color: #170068;
         display:flex;
-        justify-content: flex-start;
+        justify-content: space-around;
         flex-direction: column;
         align-items: center;
         h1{
@@ -581,13 +580,34 @@ $heading-color:#200542;
 
         #totheblog{
 
-            padding:25px;
+            padding:20px;
             background: #000;
-            margin-top:30px;
+            
             border-radius: 10px;;
             color:white;
             font-size:20px;
             text-decoration:none;
+            transition:all 100ms ease-in;
+                background: #170068;
+                border:5px solid rgb(0, 124, 195);
+                border-top:5px solid #3700ff;
+                border-bottom:5px solid #3700ff;
+                border-radius: 50px;
+                // background: #c62a88;
+                &:hover{
+                    
+                    cursor: pointer;
+                    transition:all 100ms ease-in;
+                    // box-shadow: 0px 0px 120px 5px rgba(105, 0, 226, 0.705);
+                    transform:scale(1.1);
+                    border-left:5px solid #3700ff;
+                    border-right:5px solid #3700ff;
+                    border-top:5px solid rgb(0, 124, 195);
+                    border-bottom:5px solid rgb(0, 124, 195);
+                    
+                
+
+                }
 
 
         }
