--- a/css/main.css
+++ b/css/main.css
@@ -17,8 +17,12 @@ body {
 }
 
 .navbar {
+  display: none;
+}
+
+.navbar .nav-container {
   font-family: 'Poppins', sans-serif;
-  height: 80px;
+  height: 100vh;
   width: 100%;
   position: -webkit-sticky;
   position: sticky;
@@ -31,50 +35,40 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-color: #170068;
+  background-color: rgba(23, 0, 104, 0.555);
+  position: absolute;
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
   color: white;
 }
 
-.navbar .nav-left {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 25%;
+.navbar .nav-container .logo {
+  height: 200px;
 }
 
-.navbar .nav-left .nav-link-left {
-  color: white;
-  text-decoration: none;
-  font-size: 15px;
-  font-weight: bold;
+.navbar .nav-container .links li {
+  font-size: 40px;
+  margin: 30px;
+  list-style: none;
 }
 
-.navbar .logo {
-  height: 70px;
-}
-
-.navbar .nav-right {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 25%;
-}
-
-.navbar .nav-right .nav-link-right {
+.navbar .nav-container .links li a {
   color: white;
   text-decoration: none;
-  font-size: 15px;
-  font-weight: bold;
+}
+
+.menu-button {
+  position: absolute;
+  top: 60px;
+  right: 30px;
+}
+
+.menu-button .menu-icon-line {
+  height: 5px;
+  width: 50px;
+  background: #00b7ff;
+  margin: 10px;
+  z-index: 11;
 }
 
 .main-container {
@@ -175,8 +169,8 @@ body {
   cursor: pointer;
   -webkit-transition: all 100ms ease-in;
   transition: all 100ms ease-in;
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+  -webkit-transform: scale(1.02);
+          transform: scale(1.02);
   border-left: 5px solid #3700ff;
   border-right: 5px solid #3700ff;
   border-top: 5px solid #007cc3;
@@ -366,11 +360,10 @@ body {
 .main-container .domains .domain-cards .subdomains {
   height: 200px;
   width: 200px;
-  background: #ebebeb;
+  background-color: #0f0046;
   padding: 20px;
   color: #292929;
   border-radius: 5px;
-  border: 1px solid #fff;
   margin: 30px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -393,7 +386,7 @@ body {
 
 .main-container .domains .domain-cards .subdomains h2 {
   text-align: center;
-  color: #545454;
+  color: white;
 }
 
 .main-container .partners {
@@ -475,9 +468,8 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -517,13 +509,31 @@ body {
 }
 
 .main-container .testimonials #totheblog {
-  padding: 25px;
+  padding: 20px;
   background: #000;
-  margin-top: 30px;
   border-radius: 10px;
   color: white;
   font-size: 20px;
   text-decoration: none;
+  -webkit-transition: all 100ms ease-in;
+  transition: all 100ms ease-in;
+  background: #170068;
+  border: 5px solid #007cc3;
+  border-top: 5px solid #3700ff;
+  border-bottom: 5px solid #3700ff;
+  border-radius: 50px;
+}
+
+.main-container .testimonials #totheblog:hover {
+  cursor: pointer;
+  -webkit-transition: all 100ms ease-in;
+  transition: all 100ms ease-in;
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+  border-left: 5px solid #3700ff;
+  border-right: 5px solid #3700ff;
+  border-top: 5px solid #007cc3;
+  border-bottom: 5px solid #007cc3;
 }
 
 .main-container .team {
