--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,7 @@ body {
 
 .navbar {
   display: none;
+  margin: auto;
 }
 
 .navbar .nav-container {
@@ -36,7 +37,7 @@ body {
       -ms-flex-align: center;
           align-items: center;
   background-color: rgba(23, 0, 104, 0.555);
-  position: absolute;
+  position: fixed;
   -webkit-backdrop-filter: blur(10px);
           backdrop-filter: blur(10px);
   color: white;
@@ -58,9 +59,10 @@ body {
 }
 
 .menu-button {
-  position: absolute;
+  position: fixed;
   top: 60px;
   right: 30px;
+  z-index: 131;
 }
 
 .menu-button .menu-icon-line {
@@ -68,7 +70,6 @@ body {
   width: 50px;
   background: #00b7ff;
   margin: 10px;
-  z-index: 11;
 }
 
 .main-container {
