--- a/css/main.scss
+++ b/css/main.scss
@@ -63,11 +63,13 @@ $heading-color:#200542;
     top:60px;
     right:30px;
     z-index: 131;
+    cursor:pointer;
     .menu-icon-line{
-        height:5px;
-        width:50px;
+        height:2px;
+        width:35px;
         background: #32c2d8;
         margin:10px;
+        
 
     }
 }
@@ -88,25 +90,21 @@ $heading-color:#200542;
     .home-section{
 
         height:100vh;
-      
-           
+
         // background-image: url('../assets/bg.jpg');
         background-repeat: no-repeat;
         background-size:cover;
-       
-       
-        
        .overlay{
             height:100%;
             width:100vw; // 
             
-          
+
             background-color: rgb(23, 0, 104);
             display:flex;
             justify-content: center;
             align-items:center;
             
-           .home-content{
+        .home-content{
 
             display:flex;
             justify-content: center;
@@ -359,7 +357,7 @@ $heading-color:#200542;
                 align-items:center;
 
                 img{
-                    width:50%;
+                    width:40%;
 
                 }
                 .st1{
@@ -418,7 +416,7 @@ $heading-color:#200542;
                 align-items:center;
 
                 img{
-                    width:100px;
+                    width:100%;
 
                 }
                 h2{
@@ -878,7 +876,7 @@ footer{
     align-items:center;
     flex-direction: column;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color:#98fde7;
+    color:#98f6fd;
     // border-top-left-radius: 50%;;
     // border-top-right-radius: 50%;;
    
