--- a/css/main.css
+++ b/css/main.css
@@ -548,7 +548,8 @@ body {
 }
 
 .main-container .team {
-  height: 100vh;
+  min-height: 100vh;
+  color: white;
   width: 100vw;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -567,14 +568,13 @@ body {
 
 .main-container .team .theTeam {
   height: auto;
-  width: 100vw;
+  width: 70vw;
   margin: auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -586,8 +586,9 @@ body {
 
 .main-container .team .theTeam .member {
   height: 300px;
-  width: 300px;
+  width: 250px;
   margin: 20px;
+  overflow: hidden;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -601,13 +602,14 @@ body {
       -ms-flex-direction: column;
           flex-direction: column;
   position: relative;
+  color: white;
 }
 
 .main-container .team .theTeam .member .job {
   position: absolute;
   height: 50px;
-  top: 0;
-  left: 0;
+  top: 10px;
+  left: 10px;
 }
 
 .main-container .team .theTeam .member .memavatar {
@@ -621,6 +623,25 @@ body {
 
 .main-container .team .theTeam .member h3 {
   line-height: 10px;
+}
+
+.main-container .team .theTeam .member .member-description {
+  position: absolute;
+  background: #000;
+  height: 300px;
+  text-align: justify;
+  padding: 10px;
+  top: 300px;
+  opacity: 0;
+  -webkit-transition: all 100ms ease-in;
+  transition: all 100ms ease-in;
+}
+
+.main-container .team .theTeam .member:hover .member-description {
+  top: 0px;
+  opacity: 1;
+  -webkit-transition: all 200ms ease-in;
+  transition: all 200ms ease-in;
 }
 
 .main-container .events-container {
@@ -901,6 +922,6 @@ footer .footer-others .contactUs a img {
           filter: invert(100);
   height: 40px;
   margin: 20px;
-  opacity: 0.5;
+  opacity: 1;
 }
 /*# sourceMappingURL=main.css.map */
