--- a/css/main.css
+++ b/css/main.css
@@ -88,6 +88,7 @@ body {
 
 .main-container .home-section {
   height: 100vh;
+  z-index: 1;
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -114,11 +115,12 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 60%;
   position: relative;
+  text-align: center;
   height: 100%;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
@@ -182,7 +184,7 @@ body {
 .main-container .home-section .overlay .home-contentTwo {
   top: -100px;
   position: relative;
-  width: 45%;
+  width: 0%;
 }
 
 .main-container .home-section .overlay .home-contentTwo img {
@@ -209,6 +211,7 @@ body {
   position: relative;
   height: 100vh;
   background-color: #170068;
+  z-index: 1;
 }
 
 .main-container .about-section .memphiselements {
@@ -309,6 +312,7 @@ body {
 }
 
 .main-container .domains {
+  z-index: 1;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -401,6 +405,7 @@ body {
 }
 
 .main-container .partners {
+  z-index: 1;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -473,6 +478,7 @@ body {
 }
 
 .main-container .testimonials {
+  z-index: 1;
   height: 100vh;
   width: 100vw;
   background-color: #170068;
