--- a/css/main.scss
+++ b/css/main.scss
@@ -90,10 +90,11 @@ $heading-color:#200542;
     .home-section{
 
         height:100vh;
-
+        z-index: 1;
         // background-image: url('../assets/bg.jpg');
         background-repeat: no-repeat;
         background-size:cover;
+
        .overlay{
             height:100%;
             width:100vw; // 
@@ -108,10 +109,10 @@ $heading-color:#200542;
 
             display:flex;
             justify-content: center;
-            align-items:flex-start;
+            align-items:center;
             width:60%;
             position: relative;
-            
+            text-align: center;
             height:100%;
             flex-direction: column;
             // backdrop-filter:blur(20px);
@@ -181,7 +182,7 @@ $heading-color:#200542;
         .home-contentTwo{
             top:-100px;
                 position:relative;
-            width:45%;
+            width:0%;
             img{
                 height:450px;
                 top:-300px;
@@ -203,6 +204,7 @@ $heading-color:#200542;
         position:relative;
         height:100vh;
         background-color: rgb(23, 0, 104);
+        z-index: 1;
 
         .memphiselements{
 
@@ -304,7 +306,7 @@ $heading-color:#200542;
     }
 
     .domains{
-
+        z-index: 1;
         display:flex;
         justify-content:center;
         align-items:center;
@@ -380,6 +382,8 @@ $heading-color:#200542;
     }
 
     .partners {
+
+        z-index: 1;
 
         display:flex;
         justify-content:center;
@@ -554,6 +558,7 @@ $heading-color:#200542;
     // }
 
     .testimonials{
+        z-index: 1;
         height:100vh;
         width:100vw;
         background-color: #170068;
