--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,10 @@
 @media screen and (max-width: 800px) {
+  html {
+    overflow-x: hidden;
+  }
+  body {
+    overflow-x: hidden;
+  }
   .responsive-navbar {
     height: 60px;
     width: 100vw;
@@ -47,6 +53,7 @@
         -ms-flex-align: center;
             align-items: center;
     width: 100vw;
+    overflow-x: hidden;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     -webkit-box-orient: vertical;
@@ -101,6 +108,9 @@
     width: 90%;
     font-weight: 700;
     font-size: 15px;
+  }
+  .main-container .domains {
+    height: auto;
   }
   .main-container .domains h1 {
     font-size: 30px;
