--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,6 @@ html {
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Poppins',san-serif;
   overflow-x: hidden;
   background-color: #170068;
 }
@@ -19,12 +18,13 @@ body {
 .navbar {
   display: none;
   margin: auto;
+  font-family: 'Poppins',san-serif;
 }
 
 .navbar .nav-container {
   font-family: 'Poppins', sans-serif;
   height: 100vh;
-  width: 100%;
+  width: 100vw;
   position: -webkit-sticky;
   position: sticky;
   z-index: 999;
@@ -96,7 +96,8 @@ body {
 .main-container .home-section .overlay {
   height: 100%;
   width: 100vw;
-  background-color: #170068;
+  z-index: 3;
+  background-color: rgba(23, 0, 104, 0.8);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -146,7 +147,9 @@ body {
 
 .main-container .home-section .overlay .home-content p {
   color: white;
-  font-family: 'Poppins', sans-serif;
+  font-family: adobe-garamond-pro, serif;
+  font-weight: 400;
+  font-style: normal;
   width: 80%;
   font-size: 35px;
   margin-left: 50px;
@@ -231,6 +234,18 @@ body {
   right: 130px;
 }
 
+.main-container .about-section .memphiselements:nth-child(3) {
+  position: absolute;
+  bottom: 20px;
+  right: 130px;
+}
+
+.main-container .about-section .memphiselements:nth-child(4) {
+  position: absolute;
+  bottom: 30px;
+  left: 130px;
+}
+
 .main-container .about-section h1 {
   font-size: 55px;
   font-family: 'Poppins', sans-serif;
@@ -240,7 +255,9 @@ body {
 .main-container .about-section P {
   width: 70%;
   font-size: 25px;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'adobe garamond pro', serif;
+  font-weight: 400;
+  font-style: normal;
   text-align: justify;
   font-weight: 500;
   margin: 30px;
@@ -302,6 +319,9 @@ body {
   font-size: 16px;
   text-align: center;
   width: 90%;
+  font-family: adobe-garamond-pro, serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .main-container .about-section .about-services .about-card:hover {
@@ -343,6 +363,9 @@ body {
   font-size: 25px;
   width: 70%;
   color: #ffffff;
+  font-family: adobe-garamond-pro, serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .main-container .domains .domain-cards {
@@ -430,7 +453,7 @@ body {
 }
 
 .main-container .partners .partner-container {
-  width: 80%;
+  width: 50%;
   height: auto;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -503,7 +526,7 @@ body {
 
 .main-container .testimonials .swiper-container {
   width: 70vw;
-  height: 40vh;
+  height: 30vh;
   color: white;
 }
 
@@ -846,7 +869,9 @@ body {
 .main-container .events-container .events .event-card .event-details p {
   text-align: justify;
   font-size: 15px;
-  font-family: 'Poppins', sans-serif;
+  font-family: adobe-garamond-pro, serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .main-container .events-container .events .event-card .event-details .moreaboutevent {
@@ -867,6 +892,136 @@ body {
   transition: all 100ms ease-in;
   -webkit-transform: scale(1.03);
           transform: scale(1.03);
+}
+
+.main-container .connect-section {
+  height: 100vh;
+  width: 100vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.main-container .connect-section .form-container {
+  height: 90%;
+  width: 70%;
+  color: white;
+  font-family: 'Poppins',san-serif;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: rgba(0, 0, 0, 0.116);
+  border-radius: 5px;
+}
+
+.main-container .connect-section .form-container #mai1 {
+  width: 50%;
+  overflow: hidden;
+  height: 100%;
+  border: 1px solid #fff;
+}
+
+.main-container .connect-section .form-container form {
+  height: 70%;
+  width: 90%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  position: relative;
+  top: -10px;
+}
+
+.main-container .connect-section .form-container form .form-div {
+  margin: 30px;
+}
+
+.main-container .connect-section .form-container form input[type="text"] {
+  height: 40px;
+  font-size: 15px;
+  padding: 5px;
+  font-weight: bolder;
+  width: 400px;
+  background-color: #0f0046;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+  color: white;
+  font-family: 'Poppins',san-serif;
+  margin-right: 20px;
+  position: relative;
+}
+
+.main-container .connect-section .form-container form textarea {
+  width: 400px;
+  background-color: #0f0046;
+  border: none;
+  outline: none;
+  color: white;
+  font-family: 'Poppins',san-serif;
+  overflow-x: hidden;
+  padding: 5px;
+}
+
+.main-container .connect-section .form-container form label {
+  text-align: left;
+  position: relative;
+  left: 10px;
+  padding: 5px;
+  font-size: 20px;
+}
+
+.main-container .connect-section .form-container form .form-btn {
+  border: none;
+  width: 200px;
+  height: 50px;
+  outline: none;
+  font-size: 20px;
+  color: white;
+  -webkit-transition: all 100ms ease-in;
+  transition: all 100ms ease-in;
+  border: 5px solid #007cc3;
+  border-top: 5px solid #3700ff;
+  border-bottom: 5px solid #3700ff;
+  border-radius: 50px;
+  background-color: #0f0046;
+}
+
+.main-container .connect-section .form-container form .form-btn:hover {
+  cursor: pointer;
+  -webkit-transition: all 100ms ease-in;
+  transition: all 100ms ease-in;
+  -webkit-transform: scale(1.02);
+          transform: scale(1.02);
+  border-left: 5px solid #3700ff;
+  border-right: 5px solid #3700ff;
+  border-top: 5px solid #007cc3;
+  border-bottom: 5px solid #007cc3;
 }
 
 footer {
