--- a/css/responsive.scss
+++ b/css/responsive.scss
@@ -1,5 +1,11 @@
 
 @media screen and (max-width: 800px) {
+    html{
+        overflow-x: hidden;
+    }
+    body{
+        overflow-x: hidden;
+    }
 
     .responsive-navbar{
 
@@ -52,6 +58,7 @@
             justify-content:center;
             align-items:center;
             width:100vw;
+            overflow-x:hidden;
             flex-wrap: wrap;
             flex-direction: column-reverse;
 
@@ -60,10 +67,9 @@
 
 
             .home-content{
+                
                 width:100%;
                 height:auto;
-
-
 
                 h1{
                     font-size:30px;
@@ -127,6 +133,7 @@
             }
         }
         .domains{
+            height:auto;
             h1{
                 font-size:30px;
                 font-weight: 400
