--- a/css/main.scss
+++ b/css/main.scss
@@ -1059,6 +1059,8 @@ footer{
     text-align: center;
     align-items:center;
     flex-direction: column;
+    position: relative;
+    bottom:0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color:#98f6fd;
     // border-top-left-radius: 50%;;
