--- a/css/responsive.css
+++ b/css/responsive.css
@@ -42,6 +42,10 @@
   .navbar {
     display: none;
   }
+  .main-container .home-section {
+    width: 100vw;
+    height: 100vh;
+  }
   .main-container .home-section .overlay {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -52,7 +56,6 @@
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    width: 100vw;
     overflow-x: hidden;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
@@ -62,16 +65,53 @@
             flex-direction: column-reverse;
   }
   .main-container .home-section .overlay .home-content {
-    width: 100%;
-    height: auto;
+    width: 90%;
+    height: 90vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    position: relative;
+    left: -30px;
   }
   .main-container .home-section .overlay .home-content h1 {
     font-size: 30px;
   }
   .main-container .home-section .overlay .home-content p {
     font-size: 20px;
-    width: 100%;
-    text-align: left;
+    width: 90%;
+    text-align: center;
+  }
+  .main-container .home-section .overlay .home-content .home-btn {
+    border: none;
+    width: 150px;
+    height: 40px;
+    outline: none;
+    font-size: 15px;
+    color: white;
+    -webkit-transition: all 100ms ease-in;
+    transition: all 100ms ease-in;
+    border: 2px solid #007cc3;
+    border-top: 2px solid #3700ff;
+    border-bottom: 2px solid #3700ff;
+    border-radius: 50px;
+    background-color: #0f0046;
+  }
+  .main-container .home-section .overlay .home-content .home-btn:hover {
+    cursor: pointer;
+    -webkit-transition: all 100ms ease-in;
+    transition: all 100ms ease-in;
+    -webkit-transform: scale(1.02);
+            transform: scale(1.02);
+    border-left: 2px solid #3700ff;
+    border-right: 2px solid #3700ff;
+    border-top: 2px solid #007cc3;
+    border-bottom: 2px solid #007cc3;
   }
   .main-container .home-section .overlay svg {
     height: 200px;
@@ -238,6 +278,87 @@
   }
   .main-container .events-container {
     overflow-x: hidden;
+  }
+  .main-container .connect-section {
+    height: 100vh;
+    width: 100vw;
+    overflow-x: hidden;
+  }
+  .main-container .connect-section .form-container {
+    width: 100%;
+    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .main-container .connect-section .form-container img {
+    display: none;
+  }
+  .main-container .connect-section .form-container form {
+    width: 80%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    position: relative;
+  }
+  .main-container .connect-section .form-container form input[type="text"] {
+    height: 30px;
+    font-size: 12px;
+    width: 300px;
+  }
+  .main-container .connect-section .form-container form label {
+    font-size: 15px;
+  }
+  .main-container .connect-section .form-container form textarea {
+    width: 300px;
+    position: relative;
+    right: 5px;
+  }
+  .main-container .connect-section .form-container form .form-btn {
+    border: none;
+    width: 150px;
+    height: 30px;
+    outline: none;
+    font-size: 15px;
+    color: white;
+    -webkit-transition: all 100ms ease-in;
+    transition: all 100ms ease-in;
+    border: 2px solid #007cc3;
+    border-top: 2px solid #3700ff;
+    border-bottom: 2px solid #3700ff;
+    border-radius: 50px;
+    background-color: #0f0046;
+  }
+  .main-container .connect-section .form-container form .form-btn:hover {
+    cursor: pointer;
+    -webkit-transition: all 100ms ease-in;
+    transition: all 100ms ease-in;
+    -webkit-transform: scale(1.02);
+            transform: scale(1.02);
+    border-left: 2px solid #3700ff;
+    border-right: 2px solid #3700ff;
+    border-top: 2px solid #007cc3;
+    border-bottom: 2px solid #007cc3;
+  }
+  footer {
+    height: auto;
+    width: 100vw;
   }
 }
 /*# sourceMappingURL=responsive.css.map */
